# fastapi-cloudrun-kit

./: .env.example  .env.local.example  .env.prod.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy-to-cloudrun.yml
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  items.py  users.py
app/core/: config.py  logging.py  security.py
app/models/: item.py  user.py
app/schemas/: item.py  user.py
app/services/: auth.py  firebase.py  firestore.py
app/utils/: helpers.py
deploy/: cloud-run.yaml
deploy/scripts/: deploy.sh  setup-gcp.sh
docker/: nginx.conf
firebase/: firebase.json  firestore.indexes.json  firestore.rules  storage.rules
scripts/: dev.py  firebase.py  seed.py  test.py
terraform/: README.md  backend.tf  example.tfvars  main.tf  outputs.tf  run.sh  variables.tf  versions.tf
terraform/modules/artifact-registry/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
terraform/modules/firestore/: main.tf  outputs.tf  variables.tf
terraform/modules/project-services/: main.tf  outputs.tf  variables.tf
terraform/modules/scheduler/: main.tf  outputs.tf  variables.tf
terraform/modules/service-account/: main.tf  outputs.tf  variables.tf
terraform/modules/workload-identity/: main.tf  outputs.tf  variables.tf
terraform/scripts/: tf.sh
tests/: conftest.py  test_auth.py  test_items.py  test_main.py  test_users.py
